--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          如何用 hugo 搭建个人博客(Windows版) 一、安装 hugo  下载 Hugo   在 Hugo 的 Github 下载 release 版本
+          一、安装 hugo  下载 Hugo   在 Hugo 的 Github 下载 release 版本
  解压，将 hugo.exe 放到一个目录下，并将该目录添加到 Path 重启终端，运行 hugo version 查看版本  示例
-二、快速搭建博客  进入 Hugo 官网，点击Quick Start快速开始 从 Step 2 开始抄代码，直到 Step 7  Step 2: Create a New Site hugo new site 项目名称 (建议取成github账号名称.github.io-creator) Step 3: Add a Theme cd 项目名称 git init git submodule add https://github.com/budparr/gohugo-theme-ananke.git themes/ananke echo 'theme = &quot;ananke&quot;' &gt;&gt; config.
+二、快速搭建博客  进入 Hugo 官网，点击Quick Start快速开始 从 Step 2 开始抄代码，直到 Step 7  Step 2: Create a New Site hugo new site 项目名称 (建议取成github账号名称.github.io-creator) Step 3: Add a Theme cd 项目名称 git init git submodule add https://github.com/budparr/gohugo-theme-ananke.git themes/ananke echo 'theme = &quot;ananke&quot;' &gt;&gt; config.toml Step 4: Add Some Content hugo new posts/博客名称.
         </div>
           <a href="https://jfrank2019.github.io/posts/%E5%A6%82%E4%BD%95%E7%94%A8hugo%E6%90%AD%E5%BB%BA%E4%B8%AA%E4%BA%BA%E5%8D%9A%E5%AE%A2/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
